# pysonDB

./: .data  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  _config.yml  addsdfsdf.json  as.json  dsdsd.json  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  tess.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: Build.yml
docs/: README.md  add.md  cli.md  delete.md  get.md  image_utils.md  re_search.md  update.md
example/: registry.json  registry.py
pysondb/: __init__.py  cli.py  db.py
pysondb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pysondb/cli/: __init__.py  cli.py
pysondb/core/: db.py  errors.py  utils.py
pysondb/errors/: __init__.py  db_errors.py
pysondb/imageutils/: image.py  imageutils.py
tests/: test_db.py  tests.py  tests_cli.py  tests_database.py  tests_database_on.py  tests_db.py  tests_getDb.py  tests_json_database.py  tests_json_uuid_database.py  tests_pysondb_cli.py  tests_uuid_database.py  tests_yaml_database.py  tests_yaml_uuid_database.py
