[metadata]
author = Fredy Somy
author_email = fredysomy@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
description = A Python JSON and/or YAML based lightweight Database.
license = MIT License
long_description = file: README.md
long_description_content_type = text/markdown
version = 2.0.0
keywords = pysondb,database,json,yaml
name = pysondb
url = https://github.com/fredysomy/pysonDB

[options]
python_requires = >=3
install_requires =
    fire
    beautifultable
    filelock
packages = pysondb
setup_requires =
   
zip_safe = False

[options.entry_points]
console_scripts =
    pysondb=pysondb.cli.cli:main
