[metadata]
author = Fredy Somy
author_email = fredysomy@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
description = A Python JSON and/or YAML based lightweight Database.
license = MIT License
long_description = file: README.md
long_description_content_type = text/markdown
version = 2.0.0
keywords = pysondb,database,json,yaml
name = pysondb
url = https://github.com/fredysomy/pysonDB

[options]
python_requires = >=3
install_requires =
    fire
    beautifultable
packages = find:
zip_safe = False


[options.packages.find]
exclude =
    tests*
    testing*


[options.entry_points]
console_scripts =
    pysondb=pysondb.cli:main

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
